--- a/app.json
+++ b/app.json
@@ -46,7 +46,6 @@
         "projectId": "966bbb92-0cb9-408f-8b13-72e8be4940ee"
       }
     },
-    "owner": "oliver2002",
-    "entryPoint": "./src/LoginScreen.tsx"
+    "owner": "oliver2002"
   }
 }
