--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@gluestack-ui/avatar": "^0.1.18",
-    "@gluestack-ui/icon": "^0.1.26",
-    "@gluestack-ui/nativewind-utils": "^1.0.26",
-    "@gluestack-ui/overlay": "^0.1.22",
-    "@gluestack-ui/toast": "^1.0.9",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "@rneui/themed": "^4.0.0-rc.8",
     "avatar": "^0.1.0",
+    "axios": "^1.8.4",
     "babel-plugin-module-resolver": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "better-sqlite3": "^11.9.1",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
@@ -38,8 +38,8 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
-    "gluestack-ui": "^0.7.22",
-    "nativewind": "^4.1.23",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -52,19 +52,28 @@
     "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/better-sqlite3": "^7.6.12",
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.13.10",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
+    "autoprefixer": "^10.4.21",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "jscodeshift": "^0.15.2",
+    "nodemon": "^3.1.9",
+    "postcss": "^8.5.3",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   },
   "private": true
 }
