--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "@rneui/themed": "^4.0.0-rc.8",
+    "async-storage": "^0.1.0",
     "avatar": "^0.1.0",
     "axios": "^1.8.4",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -40,12 +43,15 @@
     "expo-web-browser": "~14.0.2",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react-native": "^7.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.13.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "~4.4.0",
