--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
     "autoprefixer": "^10.4.21",
     "jest": "^29.2.1",
